[tool.poetry]
name = "worldender-ai"
version = "0.1.0"
description = "Text-adventure game about world ending events"
authors = ["James Dominguez <james@keppylab.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "worldender"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
