[tool.poetry]
name = "worldender"
version = "0.1.0"
description = "Text-adventure game about world ending events"
authors = ["James Dominguez <james@keppylab.com>"]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
bs4 = "^0.0.2"
instructor = "^1.3.2"
pandas = "^2.2.2"
wandb = "^0.17.1"
asyncio = "^3.4.3"
tabulate = "^0.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
